<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_general"
        tools:context=".ui.login.LoginActivity" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_login"
        android:layout_marginHorizontal="20dp"
        android:paddingBottom="14dp"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtCorreo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/correo"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/edtCorreo"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/border_color"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="1dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:hint="@string/ingrese_su_correo"
            android:textColorHint="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/txtContraseña"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCorreo"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrase_a"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edtPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/border_color"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="1dp"
            android:textColorHint="@android:color/white"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textPassword"
            android:hint="@string/ingrese_su_contrase_a"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtClickablePassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtClickablePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/olvid_su_contrase_a"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/ingresar"
        android:textColor="@color/black"
        android:backgroundTint="@color/amarillo"
        app:layout_constraintTop_toBottomOf="@id/lytLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        app:cornerRadius="6dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/extraRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/aun_no_tiene_cuenta" />

        <TextView
            android:id="@+id/txtClickableRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginTop="16dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/registrarse"
            android:textColor="@color/amarillo" />

    </LinearLayout>

    <TextView
        android:id="@+id/txto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/google_circular"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/txto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_2024_todos_los_derechos_reservados"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
