<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/item">

    <ImageView
        android:id="@+id/imgVista"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_image_background"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:text="@string/a"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        android:textColor="@color/verde"
        android:textSize="18sp"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgVista"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descripci_n"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgVista"
        app:layout_constraintTop_toBottomOf="@id/txtNombre" />

    <TextView
        android:id="@+id/txtPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:gravity="end"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgVista" />

</androidx.constraintlayout.widget.ConstraintLayout>
